--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <script src="https://kit.fontawesome.com/678f0a0e9e.js" crossorigin="anonymous"></script>
 </head>
 
-
 <body>
+
     <header class="header">
         <a href="#" class="logo">Sourav <span class="ct">Kumar</span></a>
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#skill">Skill</a>
+            <a href="#home ">Home</a>
+            <a href="#Skill">Skill</a>
             <a href="#Project">Project</a>
             <a href="#Education">Education</a>               
-            <a href="#contact">Contact</a>
+            <a href="#Contact">Contact</a>
         </nav>
     </header>
 
     <section class="home" id="home">
         <div class="home-img">
-            <img src="b2c64613095fbca8811300c0dbf9d7b2.jpg" alt="Profile Picture">
+            <img src="project-images/sourav_img.jpg" alt="Profile Picture">
         </div>
 
         <div class="home-content">
@@ -32,10 +32,10 @@
             <p>Full Stack Developer with expertise in front-end and back-end technologies. Passionate about building scalable web applications, writing clean code, and solving real-world problems</p>
 
             <div class="social-icon">
-                <a href="https://www.linkedin.com/in/sourav-kumar-a80020345/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/sourav-xe"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-g"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a id="aa" href="https://www.linkedin.com/in/sourav-kumar-a80020345/"><i class="fa-brands fa-linkedin"></i></a>
+                <a id="aa" href="https://github.com/sourav-xe"><i class="fa-brands fa-github"></i></a>
+                <a id="aa" href="mailto:sourav20kumar02@gmail.com"><i class="fa-brands fa-g"></i></a>
+                <a id="aa" href="#"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
 
             <a href="#" class="btn">Hire me</a>
@@ -48,7 +48,7 @@
              <div class="skill-line"></div>
         </div>
 
-        <div class="Skill-container"> 
+        <div class="Skill-container" id="Skill"> 
             <div class="Skill-box">
                 <div class="Skill-info">
                     <h4>Frontend Developer</h4>
@@ -95,7 +95,7 @@
                 <div class="line"></div>
         </div>
             
-        <div class="project-box">
+        <div class="project-box" id="Project">
             <div class="project-card">
                 <img src="project-images/e-com.png" alt="" >
                 <h3>E-Commerce</h3>
@@ -137,11 +137,74 @@
 
     </section>
 
+    <div class="line1"></div>
+
+    <section class="education" id="Education">
+        <h2 class="heading"> My <span>Education</span></h2>
+        <div class="timline">
+            <div class="container right">
+                <div class="content">
+                    <div class="tag">
+                        <h2>Delhi University</h2>
+                    </div>
+                    <div class="docs"> 
+                        <p>"I am currently pursuing a BSc program at Delhi University, where I am in my third year of studies. My passion lies in software development and web development, and I am constantly exploring new technologies to enhance my skills. I enjoy solving complex problems and building innovative solutions that make a real impact. Be yourself.</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <div class="tag">
+                        <h2>Indra Gandhi National Open University (IGNOU)</h2>
+                    </div>
+                    <div class="docs">
+                        <p>"In addition to my BSc, I am also pursuing a BCA from IGNOU because I want a solid computer science foundation and an extra degree to strengthen my profile. This journey has allowed me to dive deep into C, C++, Java, Data Structures & Algorithms (DSA), and more. Learning about programming and development is not just about gaining knowledge for me—it's about creating, experimenting, and evolving. I believe in lifelong learning, and every new challenge is an opportunity to grow!"</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <div class="tag">
+                        <h2>Full-Stack Development at GeeksforGeeks</h2>
+                    </div>
+                    <div class="docs">
+                        <p>"Currently, I am diving deeper into Full-Stack Development through a 3-4 month course at GeeksforGeeks. This journey has been incredible as I have mastered HTML, CSS, JavaScript, React, Node.js, and MongoDB. Along the way, I have built multiple projects, applying what I’ve learned to real-world applications. Working on full-stack development has given me a broader perspective on how front-end and back-end technologies work together to create seamless web experiences. coding is not just about writing lines of code; it's about building solutions that make a difference!</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="line1"></div>
 
 
-    <section class="contact" id="contact">
+    <section class="contact" id="Contact">
         <div class="contact1">
         <h2 class="heading">Contact <span>Me</span></h2></div>
         <div class="line3"></div>
@@ -153,7 +216,7 @@
                 <input type="text" placeholder="Subject">
             </div>
             <textarea name="" id="" cols="30" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
+           <a href="mailto:sourav20kumar02@gmail.com"><input type="submit" value="Send Message"  class="btn"></a> 
         </form>
 
     </section>
@@ -163,7 +226,7 @@
         <div class="social">
             <a href="https://www.linkedin.com/in/sourav-kumar-a80020345/"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/sourav-xe"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-g"></i></a>
+            <a href="mailto:sourav20kumar02@gmail.com"><i class="fa-brands fa-g"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
         </div>
         
@@ -184,4 +247,5 @@
 
 
 </body>
+<script src="index.js"></script>
 </html>
