--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <a href="#home ">Home</a>
             <a href="#Skill">Skill</a>
             <a href="#Project">Project</a>
-            <a href="#Education">Education</a>               
+            <a href="#Education">Education</a>
             <a href="#Contact">Contact</a>
+        
         </nav>
     </header>
 
@@ -52,7 +53,7 @@
             <div class="Skill-box">
                 <div class="Skill-info">
                     <h4>Frontend Developer</h4>
-                    <p>Passionate about crafting responsive, user-friendly, and visually appealing web interfaces. Skilled in HTML, CSS, JavaScript, React, and modern UI frameworks to deliver seamless user experiences.</p>
+                    <p style="font-weight: 600;">Passionate about crafting responsive, user-friendly, and visually appealing web interfaces. Skilled in HTML, CSS, JavaScript, React, and modern UI frameworks to deliver seamless user experiences. Adept at translating design concepts into functional, high-performance applications while ensuring cross-browser compatibility and accessibility. Experienced in optimizing web performance, implementing interactive UI components, and integrating APIs to enhance functionality. Continuously learning and keeping up with the latest industry trends to build dynamic, scalable, and engaging digital experiences.</p>
 
                 </div>
             </div>
@@ -60,7 +61,7 @@
             <div class="Skill-box">
                 <div class="Skill-info">
                     <h4>Backend Developer</h4>
-                    <p>Specializing in building scalable, secure, and efficient server-side applications. Experienced in Node.js, Express, MongoDB, SQL, and API development, ensuring robust backend architecture.</p>
+                    <p style="font-weight: 600;">pecializing in building scalable, secure, and efficient server-side applications. Experienced in Node.js, Express, MongoDB, SQL, and API development, ensuring robust backend architecture. Proficient in designing and optimizing databases, implementing authentication and authorization mechanisms, and integrating third-party services to enhance functionality. Skilled in writing clean, maintainable code, improving system performance, and ensuring data security. Passionate about problem-solving, debugging, and deploying reliable backend solutions that support seamless user experiences. Continuously exploring new technologies and best practices to enhance efficiency and scalability.</p>
 
                 </div>
             </div>
@@ -68,7 +69,7 @@
             <div class="Skill-box">
                 <div class="Skill-info">
                     <h4> DSA & Problem Solving</h4>
-                    <p>A strong believer in Data Structures & Algorithms (DSA) to write optimized and efficient code. Regularly solve Leetcode, CodeChef, and HackerRank challenges to enhance problem-solving skills.</p>
+                    <p style="font-weight: 600;">A strong believer in Data Structures & Algorithms (DSA) to write optimized and efficient code. Regularly solve LeetCode, CodeChef, and HackerRank challenges to enhance problem-solving skills. Proficient in algorithm design, complexity analysis, and applying DSA concepts to real-world scenarios. Experienced in tackling competitive programming problems, optimizing code performance, and developing efficient solutions for complex challenges. Passionate about continuous learning, refining logical thinking, and leveraging algorithmic approaches to build high-performance applications</p>
 
                 </div>
             </div>
@@ -77,7 +78,7 @@
             <div class="Skill-box">
                 <div class="Skill-info">
                     <h4> Time Management & Productivityr</h4>
-                    <p> Well-organized and deadline-driven. Efficient in managing tasks, prioritizing workloads, and delivering high-quality projects on time without compromising performance.</p>
+                    <p style="font-weight: 600;"> Well-organized and deadline-driven, with a strong ability to manage tasks efficiently and prioritize workloads effectively. Skilled in balancing multiple projects, setting clear goals, and maintaining focus to ensure timely delivery without compromising quality. Proficient in using productivity tools, planning workflows, and optimizing processes to enhance efficiency. Continuously striving to improve time management strategies, minimize distractions, and maintain a proactive approach to meeting deadlines while sustaining high performance.</p>
 
                 </div>
             </div>
