added new projects

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
             <div class="Skill-box">
                 <div class="Skill-info">
-                    <h4> Time Management & Productivityr</h4>
+                    <h4> Time Management & Productivity</h4>
                     <p style="font-weight: 600;"> Well-organized and deadline-driven, with a strong ability to manage tasks efficiently and prioritize workloads effectively. Skilled in balancing multiple projects, setting clear goals, and maintaining focus to ensure timely delivery without compromising quality. Proficient in using productivity tools, planning workflows, and optimizing processes to enhance efficiency. Continuously striving to improve time management strategies, minimize distractions, and maintain a proactive approach to meeting deadlines while sustaining high performance.</p>
 
                 </div>
@@ -108,6 +108,14 @@
             </div>
 
             <div class="project-card">
+                <img src="project-images/image.png" alt="">
+                <h3>3D Shoes Web</h3>
+                <strong style="color: white;">Tools Used:- Reactjs, TailwindCSS,React Three Fiber, GLTF 3D Models.</strong><br>
+                <p>II developed an interactive e-commerce website that features 3D sneaker models using React Three Fiber, offering a visually engaging and dynamic user experience. To enhance the functionality, The site’s design is fully responsive, crafted with Tailwind CSS to adapt seamlessly across various devices. Additionally, I integrated an API to fetch dynamic product data, </p>
+                <div class="btn"><a class="a" href="https://github.com/sourav-xe/3D-Shoes"> Explore More</div></a>
+            </div>
+
+            <div class="project-card">
                 <img src="project-images/github card using api.png" alt="">
                 <h3>Github User Detailer</h3>
                 <strong style="color: white;">Tools Used:- HTML5, CSS, JavaScript.</strong><br>
@@ -126,13 +134,7 @@
                 <div class="btn"><a class="a" href="https://github.com/sourav-xe/Clone-and-Projects/tree/main/E-commerce"> Explore More</div></a>
             </div>
 
-            <div class="project-card">
-                <img src="project-images/todolist.png" alt="">
-                <h3>To Doo list</h3>
-                <strong style="color: white;">Tools Used:- HTML5, CSS, JavaScript.</strong><br>
-                <p>I developed a dynamic to-do list application using HTML, CSS, and JavaScript, incorporating local storage to ensure task persistence. The project features a user-friendly interface, allowing users to add, delete, and mark tasks as completed. With well-structured JavaScript logic, it efficiently manages task states and updates in real-time. This project highlights my ability to build interactive web applications with data persistence and a smooth user experience.</p>
-                <div class="btn"><a class="a" href="https://github.com/sourav-xe/Clone-and-Projects/tree/main/E-commerce"> Explore More</div></a>
-            </div>
+            
         </div>
 
 
