--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sourav's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
+
     <script src="https://kit.fontawesome.com/678f0a0e9e.js" crossorigin="anonymous"></script>
 </head>
 
@@ -42,51 +47,77 @@
         </div>
     </section> 
 
-    <section class="Skill" id="Skill">
-        <div class="skill-merge">
-            <h2 class="heading">Skills</h2>
-             <div class="skill-line"></div>
-        </div>
+<!-- Include Font Awesome in your <head> -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
 
-        <div class="Skill-container" id="Skill"> 
-            <div class="Skill-box">
-                <div class="Skill-info">
-                    <h4>Frontend Developer</h4>
-                    <p>Passionate about crafting responsive, user-friendly, and visually appealing web interfaces. Skilled in HTML, CSS, JavaScript, React, and modern UI frameworks to deliver seamless user experiences.</p>
+<section class="Skill" id="Skill">
+  <div class="skill-merge">
+    <h2 class="heading">Skills</h2>
+    <div class="skill-line"></div>
+  </div>
 
-                </div>
-            </div>
+  <div class="Skill-container">
+    <!-- Frontend -->
+    <div class="Skill-box">
+      <div class="Skill-info">
+        <h4><i class="fas fa-laptop-code"></i> Frontend Development</h4>
+        <p>
+          <strong>Expertise in building modern, responsive</strong> web applications using
+          <strong>HTML5</strong>, <strong>CSS3</strong>, <strong>JavaScript (ES6+)</strong>,
+          and frameworks like <strong>React.js</strong>.
+          Focused on <strong>performance</strong>, <strong>accessibility</strong>, and <strong>cross-browser compatibility</strong>.
+          Skilled in integrating libraries such as <strong>Framer Motion</strong>, <strong>Tailwind CSS</strong>, and <strong>Material UI</strong>
+          to craft clean and user-centric designs.
+        </p>
+      </div>
+    </div>
 
-            <div class="Skill-box">
-                <div class="Skill-info">
-                    <h4>Backend Developer</h4>
-                    <p>Specializing in building scalable, secure, and efficient server-side applications. Experienced in Node.js, Express, MongoDB, SQL, and API development, ensuring robust backend architecture.</p>
+    <!-- Backend -->
+    <div class="Skill-box">
+      <div class="Skill-info">
+        <h4><i class="fas fa-server"></i> Backend Development</h4>
+        <p>
+          <strong>Proficient in building secure and scalable</strong> backend systems using
+          <strong>Node.js</strong>, <strong>Express.js</strong>, and <strong>MongoDB</strong>.
+          Experience in designing robust <strong>RESTful APIs</strong>, implementing <strong>JWT-based authentication</strong>,
+          handling <strong>file uploads</strong>, and building <strong>real-time systems</strong> with <strong>Socket.IO</strong>.
+          Familiar with <strong>SQL databases</strong> like MySQL and PostgreSQL.
+        </p>
+      </div>
+    </div>
 
-                </div>
-            </div>
+    <!-- DSA -->
+    <div class="Skill-box">
+      <div class="Skill-info">
+        <h4><i class="fas fa-code"></i> Data Structures & Algorithms</h4>
+        <p>
+          Strong foundation in <strong>problem-solving and optimization techniques</strong>,
+          with consistent practice on platforms like <strong>LeetCode</strong>, <strong>CodeChef</strong>,
+          and <strong>HackerRank</strong>.
+          Capable of implementing <strong>efficient solutions</strong> using arrays, trees, graphs, heaps, and more.
+          Deep understanding of <strong>algorithmic complexity</strong> and coding best practices.
+        </p>
+      </div>
+    </div>
 
-            <div class="Skill-box">
-                <div class="Skill-info">
-                    <h4> DSA & Problem Solving</h4>
-                    <p>A strong believer in Data Structures & Algorithms (DSA) to write optimized and efficient code. Regularly solve Leetcode, CodeChef, and HackerRank challenges to enhance problem-solving skills.</p>
+    <!-- Productivity -->
+    <div class="Skill-box">
+      <div class="Skill-info">
+        <h4><i class="fas fa-clock"></i> Time Management & Productivity</h4>
+        <p>
+          Known for being <strong>highly organized</strong>, with a track record of managing multiple priorities under tight deadlines.
+          Skilled in <strong>strategic planning</strong>, using tools like <strong>Notion</strong>, <strong>Trello</strong>, and <strong>Google Calendar</strong>
+          to boost productivity.
+          Excellent at <strong>task prioritization</strong> and maintaining <strong>focus in high-pressure environments</strong>.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
-                </div>
-            </div>
-
-            
-            <div class="Skill-box">
-                <div class="Skill-info">
-                    <h4> Time Management & Productivityr</h4>
-                    <p> Well-organized and deadline-driven. Efficient in managing tasks, prioritizing workloads, and delivering high-quality projects on time without compromising performance.</p>
-
-                </div>
-            </div>
-
-            
-            </div>
-
-        </div>
-    </section>
 
     <section class="project">
 
